# COMP345

./: .gitignore  CMakeLists.txt  Document.h  README.md  Tokenizer.cpp  Tokenizer.h  abstract_tokenizer.cpp  abstract_tokenizer.h  document.cpp  document.h  document_exception.cpp  document_exception.h  document_indexer.cpp  document_indexer.h  file1.txt  file2.txt  file3.txt  google.cpp  index.cpp  index.h  index_document.cpp  index_document.h  index_exception.cpp  index_exception.h  index_item.cpp  index_item.h  indexer.cpp  indexer.h  indexing.cpp  main.cpp  movie.cpp  movie.h  movie_exception.cpp  movie_exception.h  practice.cpp  printing out weights.txt  query_exception.cpp  query_exception.h  query_result.cpp  query_result.h  (+17 more)
google/: file1.txt  file2.txt  file3.txt
google/src/: Document.h  Tokenizer.cpp  Tokenizer.h  document.cpp  google.cpp  indexer.cpp  indexer.h  query_result.cpp  stopword.cpp  tokenizer.cpp  tokenizer.h
textFiles/: Readmeass1.txt  file1.txt  file2.txt  file3.txt  printing out weights.txt
